[package]
name = "pantry_client"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
description = "A client for the Pantry API"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
url = { version = "2.5.0"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

